--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
         </div>
      </section>
 
-     <!-- presention -->
+     <!-- presentation -->
       <section class="a-propos">
         <h2>A propos de moi</h2>  
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio inventore, explicabo officia commodi molestias suscipit nam expedita atque consequuntur eius deleniti, dolor, error repellat assumenda nisi in ad! Sint, quasi.        </p>
@@ -58,14 +58,15 @@
 <!-- mes compétences -->
     <section class="competences">
         <h2>Mes compétences</h2>
-        <div class="cardscompet">
-            <div class="projet">
+        <div class="competcards">
+            <div class="competcard">
                 <h3>Développement web</h3>
                 <h4>HTML</h4>
                 <h4>CSS</h4>
                 <h4>WORD PRESS</h4>  
             </div>
-            <div class="projet">
+
+            <div class="competcard">
                 <h3>Web-Design</h3>
                 <h4>Illustrator</h4>
                 <h4>Photoshop</h4>
@@ -108,7 +109,7 @@
     </section>
 
 
-    <h3> Contacter moi </h3>
+    <h3> Contactez moi </h3>
         <section class="formular">
             
                     <form action="" method="get" class="form-example">
