--- a/Index.html
+++ b/Index.html
@@ -19,17 +19,17 @@
 
         <ul>
           <li>
-            <a href="">À propos</a>
+            <a href="#Apropos">À propos</a>
           </li>
           <li>
-            <a href="">Mes compétences</a>
+            <a href="#Mescompetences">Mes compétences</a>
           </li>
           <li>
-            <a href="">Mes projets</a>
+            <a href="#Mesprojets">Mes projets</a>
           </li>
 
           <li>
-            <a href="">Contact</a>
+            <a href="#Contact">Contact</a>
           </li>
         </ul>
       </nav>
@@ -52,7 +52,7 @@
     </section>
 
     <!-- presentation -->
-    <section class="a-propos">
+    <section id="Aproposclass"="a-propos">
         <h2>A propos de moi</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio
@@ -65,7 +65,7 @@
     </section>
 
     <!-- mes compétences -->
-    <section class="competences">
+    <section id="Mescompetences" class="competences">
       <h2>Mes compétences</h2>
       <div class="competcards">
         <div class="competcard">
@@ -115,7 +115,7 @@
 
     <!-- Mes projets -->
 
-    <section id="projectscards">
+    <section id="Mesprojets" id="projectscards">
       <h2>Mes projets</h2>
       <div class="projets">
         <div class="card">
@@ -141,7 +141,7 @@
 
     <h2>Contact</h2>
 
-    <section id="contact">
+    <section id="Contact" id="contactme">
       <h3>Un projet en tête?</h3>
       <form action="" class="card">
         <div class="firstRow">
