--- a/Index.html
+++ b/Index.html
@@ -155,7 +155,8 @@
           <img src="bougies_site.png" alt="" />
           <h4> Lueur & Parfum – Site vitrine</h4>
 
-          <button class="btn">Découvrir</button>
+          <a href="https://salmanaji22.github.io/renduHTMLCSS/"class="btn">Découvrir</a> 
+          
         </div>
         <div class="card">
           <img src="puressence.png" alt="" />
